set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(ALL_SOURCES
    ckm.cpp
    ckm.h
    su_n_algebra.cpp
    su_n_algebra.h
    algebra.h
    algebraState.cpp
    algebraState.h
    amplitude.cpp
    amplitude.h
    amplitudeInitializer.cpp
    amplitudeInitializer.h
    amplitudeSimplification.cpp
    amplitudeSimplification.h
    bernoulli.h
    builtinOperators.cpp
    builtinOperators.h
    cache.h
    callback.h
    colorSimplification.cpp
    colorSimplification.h
    colorSpace.cpp
    colorSpace.h
    dimensionalRegularization.cpp
    dimensionalRegularization.h
    diracology.cpp
    diracology.h
    doubleVector.h
    drawer.cpp
    drawer.h
    expander.cpp
    expander.h
    fermionChain.cpp
    fermionChain.h
    fermionCurrent.cpp
    fermionCurrent.h
    fermionFlow.cpp
    fermionFlow.h
    fermionOrder.cpp
    fermionOrder.h
    fermionicField.cpp
    fermionicField.h
    feynOptions.cpp
    feynOptions.h
    feynmanDiagram.cpp
    feynmanDiagram.h
    feynmanIntegral.cpp
    feynmanIntegral.h
    feynmanRule.cpp
    feynmanRule.h
    feynruleMomentum.cpp
    feynruleMomentum.h
    filters.h
    flavor.cpp
    flavor.h
    gauge.cpp
    gauge.h
    gauged.h
    gaugedGroup.cpp
    gaugedGroup.h
    generator.cpp
    generator.h
    ghostField.cpp
    ghostField.h
    goldstoneField.cpp
    goldstoneField.h
    graph.cpp
    graph.h
    group.cpp
    group.h
    groupIndices.cpp
    groupIndices.h
    insertion.cpp
    insertion.h
    interactionTerm.cpp
    interactionTerm.h
    iterable.cpp
    iterable.h
    jsonToPhysics.cpp
    jsonToPhysics.h
    kinematics.cpp
    kinematics.h
    lagrangian.cpp
    lagrangian.h
    lhaBuiltIn.h
    lhaBuiltIn.cpp
    looptools_extension.cpp
    looptools_extension.h
    looptools_init.h
    looptools_interface.h
    looptools_patch.h
    looptools_quad_extension.h
    marty.h
    matrix.h
    model.cpp
    model.h
    modelBuilder.cpp
    modelBuilder.h
    modelData.cpp
    modelData.h
    momentumConservation.cpp
    momentumConservation.h
    mrtError.h
    mrtInterface.cpp
    mrtInterface.h
    mrtInterfaceCurrent.h
    mrtOptions.h
    mrtUtils.h
    mrtlog.h
    mtylibrary.h
    mtyversion.h
    operatorBasis.h
    penguinpatch.cpp
    penguinpatch.h
    polarization.cpp
    polarization.h
    propagator.cpp
    propagator.h
    quantumField.cpp
    quantumField.h
    quantumFieldTheory.cpp
    quantumFieldTheory.h
    quantumNumber.cpp
    quantumNumber.h
    representation.cpp
    representation.h
    scalarField.cpp
    scalarField.h
    semiSimpleAlgebra.cpp
    semiSimpleAlgebra.h
    simpleWilson.cpp
    simpleWilson.h
    spectrum.cpp
    spectrum.h
    std_vector_implementation.h
    topology.h
    traceIdentities.cpp
    traceIdentities.h
    vectorField.cpp
    vectorField.h
    wick.cpp
    wick.h
    wilson.cpp
    wilson.h
    wilsonOperator.cpp
    wilsonOperator.h
)

add_library(marty-core OBJECT ${ALL_SOURCES})
set_property(TARGET marty-core PROPERTY POSITION_INDEPENDENT_CODE 1)
